Changed AStarSearch Added stuff I needed to Path, Node